--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
     <input type = "number" onchange="test_change(value)" id="user">
     <button type = "button" onclick="test();">submit</button>
-    
+    <div id="only_one" style="margin-top: 10px">
+
+    </div>
+    <div id="result" style="margin-top: 10px">
+
+    </div>
   </body>
 
 
