added my-app and average calculation

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <h1>AWE</h1>
 
-    <input type = "number" onchange="test_change(value)" id="user">
-    <button type = "button" onclick="test();">submit</button>
-    <div id="only_one" style="margin-top: 10px">
+    <input type = "text" id="user_in">
+    <button type = "button" onclick="handleClick('user_in');">submit</button>
+    <div id="num" style="margin-top: 10px">
 
     </div>
-    <div id="result" style="margin-top: 10px">
+    <div id="ave" style="margin-top: 10px">
 
     </div>
   </body>
